; ModuleID = '/home/carl/AnghaBench/skynet/lualib-src/extr_lua-netpack.c_save_uncomplete.c'
source_filename = "/home/carl/AnghaBench/skynet/lualib-src/extr_lua-netpack.c_save_uncomplete.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.uncomplete = type { %struct.TYPE_2__, %struct.uncomplete* }
%struct.TYPE_2__ = type { i32 }
%struct.queue = type { %struct.uncomplete** }

@llvm.used = appending global [1 x i8*] [i8* bitcast (%struct.uncomplete* (i32*, i32)* @save_uncomplete to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal %struct.uncomplete* @save_uncomplete(i32* %0, i32 %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i32, align 4
  %5 = alloca %struct.queue*, align 8
  %6 = alloca i32, align 4
  %7 = alloca %struct.uncomplete*, align 8
  store i32* %0, i32** %3, align 8
  store i32 %1, i32* %4, align 4
  %8 = load i32*, i32** %3, align 8
  %9 = call %struct.queue* @get_queue(i32* %8)
  store %struct.queue* %9, %struct.queue** %5, align 8
  %10 = load i32, i32* %4, align 4
  %11 = call i32 @hash_fd(i32 %10)
  store i32 %11, i32* %6, align 4
  %12 = call %struct.uncomplete* @skynet_malloc(i32 16)
  store %struct.uncomplete* %12, %struct.uncomplete** %7, align 8
  %13 = load %struct.uncomplete*, %struct.uncomplete** %7, align 8
  %14 = call i32 @memset(%struct.uncomplete* %13, i32 0, i32 16)
  %15 = load %struct.queue*, %struct.queue** %5, align 8
  %16 = getelementptr inbounds %struct.queue, %struct.queue* %15, i32 0, i32 0
  %17 = load %struct.uncomplete**, %struct.uncomplete*** %16, align 8
  %18 = load i32, i32* %6, align 4
  %19 = sext i32 %18 to i64
  %20 = getelementptr inbounds %struct.uncomplete*, %struct.uncomplete** %17, i64 %19
  %21 = load %struct.uncomplete*, %struct.uncomplete** %20, align 8
  %22 = load %struct.uncomplete*, %struct.uncomplete** %7, align 8
  %23 = getelementptr inbounds %struct.uncomplete, %struct.uncomplete* %22, i32 0, i32 1
  store %struct.uncomplete* %21, %struct.uncomplete** %23, align 8
  %24 = load i32, i32* %4, align 4
  %25 = load %struct.uncomplete*, %struct.uncomplete** %7, align 8
  %26 = getelementptr inbounds %struct.uncomplete, %struct.uncomplete* %25, i32 0, i32 0
  %27 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %26, i32 0, i32 0
  store i32 %24, i32* %27, align 8
  %28 = load %struct.uncomplete*, %struct.uncomplete** %7, align 8
  %29 = load %struct.queue*, %struct.queue** %5, align 8
  %30 = getelementptr inbounds %struct.queue, %struct.queue* %29, i32 0, i32 0
  %31 = load %struct.uncomplete**, %struct.uncomplete*** %30, align 8
  %32 = load i32, i32* %6, align 4
  %33 = sext i32 %32 to i64
  %34 = getelementptr inbounds %struct.uncomplete*, %struct.uncomplete** %31, i64 %33
  store %struct.uncomplete* %28, %struct.uncomplete** %34, align 8
  %35 = load %struct.uncomplete*, %struct.uncomplete** %7, align 8
  ret %struct.uncomplete* %35
}

declare dso_local %struct.queue* @get_queue(i32*) #1

declare dso_local i32 @hash_fd(i32) #1

declare dso_local %struct.uncomplete* @skynet_malloc(i32) #1

declare dso_local i32 @memset(%struct.uncomplete*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
